@@ -464,6 +464,8 @@ RegisterClassExW@4
 RegisterClassW@4
 RegisterClipboardFormatA@4
 RegisterClipboardFormatW@4
+RegisterDeviceNotificationA@12
+RegisterDeviceNotificationW@12
 RegisterHotKey@16
 RegisterWindowMessageA@4
 RegisterWindowMessageW@4
